<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_radar</name>
  <version>1.2.4</version>
  <description>
    The turtlebot3_radar package provides roslaunch scripts for starting the Radar
  </description>
  <license>Apache 2.0</license>
  <author email="braca51e@gmail.com">Luis</author>
  <author>lUIS bRACAMONTES</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website"></url>
  <url type="emanual"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ti_mmwave_rospkg</depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
